# profile-pdf

./: .dockerignore  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  generate_pdf.py  justfile  package-lock.json  package.json  postcss.config.js  pyproject.toml
.github/workflows/: pages.yml  partial-ci-checks.yml  pr.yml  release.yml
public/: CNAME  index.html
src/profile/: generate_pdf.py
src/profile/templates/: template.html
src/profile_pdf/: __init__.py  generate.py  models.py
src/profile_pdf/styles/: base.css  cover_page.css  custom.css  experiences.css
src/profile_pdf/templates/: profile.html  template.html
src/profile_pdf/templates/partials/: cover_page.html  experiences.html
tests/: test_filters.py  test_generate.py
