[project]
name = "profile"
version = "0.1.0"
description = "Generating my profile as PDF using HTML/CSS and Weasyprint"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "weasyprint>=66.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
